--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^5.0.0
   flutter:
     sdk: flutter
 
@@ -60,7 +61,10 @@ flutter:
   assets:
     - autopick/app/images/v2-1wsnk-7wa3f-removebg-preview.png
     - autopick/app/images/high-quality-modular-wardrobes-forster-great-lakes-removebg-preview.png
-
+    - autopick/app/images/casual_clothes.jpg
+    - autopick/app/images/formal_clothes.jpg
+    - autopick/app/images/sleeping_clothes.jpg
+    - autopick/app/images/uniform.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
