--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,10 @@ flutter:
     - autopick/app/images/formal_clothes.png
     - autopick/app/images/uniform.png
     - autopick/app/images/sleeping_clothes.png
+    - autopick/app/images/model.png
+    - autopick/app/images/suit.png
+    - autopick/app/images/sandals.png
+    - autopick/app/images/lheyyy.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -96,3 +100,5 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
 
+autopick/app/images/pose:
+  png:
